# test_case_task_manager

./: .gitignore  .gitlab-ci.yml  .isort.cfg  Dockerfile  README.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
app/: config.py  database.py  exceptions.py  logger.py  main.py
app/dao/: base.py
app/tasks/: dao.py  models.py  router.py  schemas.py
app/users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
migrations/: env.py
migrations/versions/: 0d4e51a51829_initial_migration.py  2bfeff22d049_поменял_тип_у_колонки_user_id_в_tasks.py
tests/: conftest.py
tests/api_tests/: tests_tasks_api.py  tests_users_api.py
tests/unit_tests/: tests_tasks_dao.py  tests_users_dao.py
